<resources>
    <string name="app_name">AgroApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lbl_name">Nombres</string>
    <string name="lbl_last_name">Apellidos</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_contrasena">Contraseña</string>
    <string name="btn_register">Registrar</string>

    <string name="lbl_control_desc">Descripción</string>
    <string name="date_format">dd/mm/yyyy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="what_s_on_your_mind">Ingrese su consulta</string>

    <string name="upload_image">Cargar Imagen</string>
    <string name="save_image">Guardar imágenes</string>
</resources>
